--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-OI
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="">
+<title>Site</title>
+</head>
+
+<body>
+    Ola Mundo
+</body>
+
+</html>
