Adicionar Estrutura CSS

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="">
-<title>Site</title>
+    <meta name="viewport" content="width=device-width, ">
+    <title>Site</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
